fix: added overflow wrap on post its

--- a/src/components/PostItCard/style.css
+++ b/src/components/PostItCard/style.css
@@ -43,4 +43,5 @@
   display: flex;
   margin: 0px 15px;
   flex-direction: column;
+  overflow-wrap: break-word;
 }
